[package]
name = "pfapack-sys"
version = "0.1.0"
edition = "2021"
links = "pfapack"
license-file = "LapackLicense"
description = "Rust bindings to pfapack, a Fortran library to compute Pfaffians."
repository = "https://github.com/Duumbo/pfapack-sys-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[dependencies.num-complex]
version = "0.4"
default-features = false

[lib]
name = "pfapack_sys"
path = "src/pfapack.rs"
